# nsdf

./: .gitignore  README.md  pyproject.toml
nsdf/: example_sdf.py  infer.py  make_dataset.py  model.py  sdf_dataset.py  train.py
scripts/: gen_ds.sh  train.sh
